# redux-unifi-portal

./: .env.example  .gitignore  README.md  SPEC.md  agents.md  deploy.sh  docker-compose.nginx-certbot.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_msp_schema.py  0002_add_site_success_url.py  0003_add_tos_only.py
backend/app/: celery_app.py  db.py  deps.py  main.py  redis.py  security.py  settings.py  tenancy.py
backend/app/models/: __init__.py  admin.py  auth_event.py  base.py  enums.py  guest_identity.py  oidc.py  portal_session.py  site.py  tenant.py  voucher.py
backend/app/routes/: __init__.py  admin.py  guest.py  oidc.py
backend/app/schemas/: admin.py  admin_oidc.py  admin_site.py  admin_tenant.py  admin_voucher.py  guest.py
backend/app/scripts/: seed.py
backend/app/services/: oidc.py  otp.py  portal_session.py  ratelimit.py  unifi.py  vouchers.py
backend/app/tasks/: otp.py
backend/tests/: conftest.py  test_admin_auth.py  test_guest_endpoints.py  test_oidc.py  test_otp.py  test_portal_session.py  test_unifi.py  test_vouchers.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: data-table.tsx
frontend/components/admin/: tenant-select.tsx
frontend/components/ui/: alert.tsx  button.tsx  card.tsx  dialog.tsx  sonner.tsx  table.tsx
frontend/lib/: api.ts  use-tenant.ts
frontend/nginx/: Dockerfile  default.conf.template  entrypoint.sh
(+11 files in other folders)
